@@ -1,3 +1,7 @@
+2009-04-13  kokosabu  <kokosabu@gmail.com>
+
+        * VM.h : Changed std::map => gc_vector.
+
 2009-04-12  higepon  <higepon@users.sourceforge.jp>
 
         * OSCompat.cpp (scheme::nativeTranscoder): Added native-transcoder for Windows.
